changepassword form (WIP)

--- a/templates/site/changepassword.html.twig
+++ b/templates/site/changepassword.html.twig
@@ -9,21 +9,9 @@
                     <header class="major">
                         <h1>Changer mon mot de passe</h1>
                     </header>
-                    <form method="post" action="#">
-                        <p>
-                            <label for="password">Mot de passe actuel</label>
-                            <input type="text" title="password" id="password">
-                        </p>
-                        <p>
-                            <label for="newpassword">Nouveau mot de passe</label>
-                            <input type="text" id="newpassword" title="newpassword">
-                        </p>
-                        <p>
-                            <label for="confirmpassword">Confirmation du mot de passe</label>
-                            <input type="text" id="confirmpassword" title="confirmpassword">
-                        </p>
-                        <button>Valider</button>
-                    </form>
+                    {{ form_start(form) }}
+                    {{ form_widget(form) }}
+                    {{ form_end(form) }}
                 </div>
             </section>
         </div>
