throw exception event/{name} missing

--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -9,7 +9,7 @@
                     <header class="major">
                         <h1>404</h1>
                     </header>
-                    <p>Page non trouvé</p>
+                    <p>{{ status_text }}</p>
                     <p><a href="{{ path('home') }}">Retour à l'accueil</a></p>
                 </div>
             </section>
