--- a/templates/site/profil.html.twig
+++ b/templates/site/profil.html.twig
@@ -21,7 +21,7 @@
                         {% endfor %}
                         <!-- avatar -->
                     </header>
-                    {{ form_start(userForm, {'attr': {'id': 'updateProfile'}}) }}
+                    {{ form_start(userForm, {'attr': {'id': 'updateProfile', 'novalidate': 'novalidate'}}) }}
                         <p>
                             {{ form_widget(userForm.avatarFile) }}
                             {{ form_label(userForm.avatarFile) }}
@@ -29,14 +29,17 @@
                         <p>
                             {{ form_widget(userForm.firstName) }}
                             {{ form_label(userForm.firstName) }}
+                            {{ form_errors(userForm.firstName) }}
                         </p>
                         <p>
                             {{ form_widget(userForm.lastName) }}
                             {{ form_label(userForm.lastName) }}
+                            {{ form_errors(userForm.lastName) }}
                         </p>
                         <p>
                             {{ form_widget(userForm.email) }}
                             {{ form_label(userForm.email) }}
+                            {{ form_errors(userForm.email) }}
                         </p>
                         <h2>Mes abonnements : </h2>
                         <p>M'abonner aux notifications des nouveaux évènements</p>
