profil ajax form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="{{ asset('asset/css/main.css') }}" />
+        <link rel="stylesheet" href="{{ asset('asset/css/toast.css') }}" />
     </head>
     <body>
         <!-- Wrapper -->
@@ -111,6 +112,7 @@
         <script src="{{ asset('asset/js/jquery.scrolly.min.js') }}"></script>
         <script src="{{ asset('asset/js/jquery.scrollex.min.js') }}/"></script>
         <script src="{{ asset('asset/js/skel.min.js') }}"></script>
+        <script src="{{ asset('asset/js/toast.js') }}"></script>
         <script src="{{ asset('asset/js/util.js') }}"></script>
         <script src="{{ asset('asset/js/main.js') }}"></script>
         {% block javascripts %}{% endblock %}
