--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -13,6 +13,16 @@
                         <h4>Jusqu'au {{ weekend.endDate|date('d-m-Y') }}</h4>
                         {% endif %}
                     </header>
+                    {% if app.user %}
+                        {% if app.user.id == 16 %}
+                            <p>Je suis l'utilisateur {{ app.user.id }}</p>
+                            {% for event in userFollow  %}
+                                <p>{{ dump(userFollow) }}</p>
+                            {% endfor %}
+                            {#<p>{{ userFollow }}</p>#}
+                        {% endif %}
+                        <button>S'abonner</button>
+                    {% endif %}
                     <span class="image main"><img src="{{ asset_base }}{{ party ? asset(party.banner) : (weekend ? asset(weekend.banner) : asset(exhibit.banner)) }}" alt="{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}" /></span>
                         <h3>Prix : {{ party ? party.price : (weekend ? weekend.price : exhibit.price) }} € - Lieu : {{ party ? party.location : (weekend ? weekend.location : exhibit.location) }}</h3>
                     <h3>Contenu de l'event</h3>
