--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -26,7 +26,7 @@
                     <span class="image main"><img src="{{ asset_base }}{{ party ? asset(party.banner) : (weekend ? asset(weekend.banner) : asset(exhibit.banner)) }}" alt="{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}" /></span>
                         <h3>Prix : {{ party ? party.price : (weekend ? weekend.price : exhibit.price) }} € - Lieu : {{ party ? party.location : (weekend ? weekend.location : exhibit.location) }}</h3>
                     <h3>Contenu de l'event</h3>
-                    <p>{{ party ? party.details : (weekend ? weekend.details : exhibit.details) }}</p>
+                    <div>{{ (party ? party.details : (weekend ? weekend.details : exhibit.details))|raw }}</div>
                 </div>
             </section>
         </div>
