--- a/templates/mails/eventcanceled.html.twig
+++ b/templates/mails/eventcanceled.html.twig
@@ -1,11 +1,149 @@
-<h3>Oops, l'événement {{ name }} a été annulé ! :/</h3>
+<!-- THIS EMAIL WAS BUILT AND TESTED WITH LITMUS http://litmus.com -->
+<!-- IT WAS RELEASED UNDER THE MIT LICENSE https://opensource.org/licenses/MIT -->
+<!-- QUESTIONS? TWEET US @LITMUSAPP -->
+<!doctype html>
+<html>
+<head>
+    <title></title>
+    <style type="text/css">
+        /* CLIENT-SPECIFIC STYLES */
+        body, table, td, a { -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+        table, td { mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
+        img { -ms-interpolation-mode: bicubic; }
 
-<p>C'est pas maintenant qu'on va se bourrer la gueule</p>
+        /* RESET STYLES */
+        img { border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; }
+        table { border-collapse: collapse !important; }
+        body { height: 100% !important; margin: 0 !important; padding: 0 !important; width: 100% !important; }
 
-<p>En savoir plus :</p>
+        /* iOS BLUE LINKS */
+        a[x-apple-data-detectors] {
+            color: inherit !important;
+            text-decoration: none !important;
+            font-size: inherit !important;
+            font-family: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+        }
 
-<div>{{ details }}</div>
+        /* MOBILE STYLES */
+        @media screen and (max-width: 600px) {
+            .img-max {
+                width: 100% !important;
+                max-width: 100% !important;
+                height: auto !important;
+            }
 
-Retrouvez nous sur <a href="localhost:8000">bdecheval.fr</a>
+            .max-width {
+                max-width: 100% !important;
+            }
 
-<p>>A plus!</p>
+            .mobile-wrapper {
+                width: 85% !important;
+                max-width: 85% !important;
+            }
+
+            .mobile-padding {
+                padding-left: 5% !important;
+                padding-right: 5% !important;
+            }
+        }
+
+        /* ANDROID CENTER FIX */
+        div[style*="margin: 16px 0;"] { margin: 0 !important; }
+    </style>
+</head>
+<body style="margin: 0 !important; padding: 0; !important background-color: #ffffff;" bgcolor="#ffffff">
+
+<!-- HIDDEN PREHEADER TEXT -->
+<div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Open Sans, Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
+    Lorem ipsum dolor que ist
+</div>
+
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+        <td align="center" valign="top" width="100%" background="bg.jpg" bgcolor="#3b4a69" style="background: #3b4a69 url('bg.jpg'); background-size: cover; padding: 50px 15px;" class="mobile-padding">
+            <!--[if (gte mso 9)|(IE)]>
+            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+                <tr>
+                    <td align="center" valign="top" width="600">
+            <![endif]-->
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
+                <tr>
+                    <td align="center" valign="top" style="padding: 0 0 20px 0;">
+                        <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t1.0-1/p200x200/24993311_473358123059190_2466449475428580599_n.png?_nc_cat=0&oh=597d1dae33267a6120e0cd82515c1362&oe=5B3F4CC6" width="50" height="50" border="0" style="display: block;">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top" style="padding: 0; font-family: Open Sans, Helvetica, Arial, sans-serif;">
+                        <h5 style="font-size: 40px; color: #ffffff;">Oops, votre BDE IESA a annulé un event.</h5>
+                        <h4 style="font-size: 40px; color: #ffffff;">{{ name }}</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top" style="font-family: Open Sans, Helvetica, Arial, sans-serif; padding-top: 0;">
+
+                        <p style="color: #b7bdc9; font-size: 16px; line-height: 24px; margin: 0;">
+                            {{ details|raw }}
+                        </p>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" style="padding: 25px 0 0 0;">
+                        <table border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                                <td align="center" style="border-radius: 28px;" bgcolor="#75b6c9">
+                                    <a href="localhost:8000/event/{{ name }}" target="_blank" style="font-size: 18px; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 28px; background-color: #75b6c9; padding: 16px 28px; border: 1px solid #75b6c9; display: block;">Voir</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+            <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
+        </td>
+    </tr>
+    <tr>
+        <td align="center" height="100%" valign="top" width="100%" bgcolor="#f6f6f6" style="padding: 40px 15px;">
+            <!--[if (gte mso 9)|(IE)]>
+            <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">
+                <tr>
+                    <td align="center" valign="top" width="600">
+            <![endif]-->
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
+                <tr>
+                    <td align="center" valign="top" style="padding: 0 0 5px 0;">
+                        <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t1.0-1/p200x200/24993311_473358123059190_2466449475428580599_n.png?_nc_cat=0&oh=597d1dae33267a6120e0cd82515c1362&oe=5B3F4CC6" width="35" height="35" border="0" style="display: block;">
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top" style="padding: 0; font-family: Open Sans, Helvetica, Arial, sans-serif; color: #999999;">
+                        <p style="font-size: 14px; line-height: 20px;">
+                            BDE IESA<br>
+                            6 rue d'Argenteuil<br/>
+                            Paris
+
+                            <br><br>
+
+                            <a href="localhost:8000" style="color: #999999;" target="_blank">Voir en ligne</a>
+                            &nbsp; &bull; &nbsp;
+                            <a href="localhost:8000/event/{{ name }}" style="color: #999999;" target="_blank">Se désabonner</a>
+                        </p>
+                    </td>
+                </tr>
+            </table>
+            <!--[if (gte mso 9)|(IE)]>
+            </td>
+            </tr>
+            </table>
+            <![endif]-->
+        </td>
+    </tr>
+</table>
+</body>
+</html>
