--- a/templates/site/forgotpassword.html.twig
+++ b/templates/site/forgotpassword.html.twig
@@ -9,13 +9,13 @@
                     <header class="major">
                         <h1>Mot de passe oublié</h1>
                     </header>
-                    <form method="post" action="#">
+                    {{ form_start(form) }}
                         <p>
-                            <label for="mail">Email</label>
-                            <input type="text" title="mail" id="mail">
+                            {{ form_label(form.email) }}
+                            {{ form_widget(form.email) }}
                         </p>
-                        <button>Valider</button>
-                    </form>
+                        <button type="submit">Valider</button>
+                    {{ form_end(form) }}
                 </div>
             </section>
         </div>
