mot de passe oublié terminé

--- a/templates/site/forgotpassword.html.twig
+++ b/templates/site/forgotpassword.html.twig
@@ -9,6 +9,9 @@
                     <header class="major">
                         <h1>Mot de passe oublié</h1>
                     </header>
+                    {% if invalid_email is defined %}
+                        mytho, ton email existe pas
+                    {% endif %}
                     {{ form_start(form) }}
                         <p>
                             {{ form_label(form.email) }}
