--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,6 +12,18 @@
                     {# templates/security/login.html.twig #}
                     {# ... you will probably extend your base template, like base.html.twig #}
 
+                    {% if app.session %}
+                        <div class="flash-message">
+                            {% for label, messages in app.session.flashbag.all %}
+                                {% for message in messages %}
+                                    <div class="alert alert-{{ label }}">
+                                        {{ message }}
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
                     {% if error %}
                         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                     {% endif %}
