--- a/templates/site/changepassword.html.twig
+++ b/templates/site/changepassword.html.twig
@@ -11,6 +11,7 @@
                     </header>
                     {{ form_start(form) }}
                     {{ form_widget(form) }}
+                    <button type="submit">Valider</button>
                     {{ form_end(form) }}
                 </div>
             </section>
