contact form ajax

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -116,6 +116,7 @@
         <script src="{{ asset('asset/js/toast.js') }}"></script>
         <script src="{{ asset('asset/js/util.js') }}"></script>
         <script src="{{ asset('asset/js/main.js') }}"></script>
+        <script src="{{ asset('asset/js/contactForm.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
