--- a/templates/site/contact.html.twig
+++ b/templates/site/contact.html.twig
@@ -12,7 +12,7 @@
                             {{ msg }}
                         {% endfor %}
                     </header>
-                    {{ form_start(contactForm) }}
+                    {{ form_start(contactForm, {'attr': {'id': 'contactForm', 'novalidate': 'novalidate'}}) }}
                         {{ form_widget(contactForm.name) }}
                         {{ form_label(contactForm.name) }}
                         {{ form_widget(contactForm.email) }}
@@ -21,7 +21,7 @@
                         {{ form_label(contactForm.subject) }}
                         {{ form_widget(contactForm.message) }}
                         {{ form_label(contactForm.message) }}
-                        <button type="submit">Envoyers</button>
+                        <button type="submit">Envoyer</button>
                     {{ form_end(contactForm) }}
                     <p><a href="{{ path('home') }}">Retour à l'accueil</a></p>
                 </div>
