--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -3654,7 +3654,6 @@
 /* Contact */
 
 	#contact {
-		border-bottom: solid 1px rgba(212, 212, 255, 0.1);
 		overflow-x: hidden;
 	}
 
@@ -3667,14 +3666,14 @@
 		}
 
 			#contact > .inner > :nth-child(2n - 1) {
-				padding: 4em 3em 2em 0 ;
 				border-right: solid 1px rgba(212, 212, 255, 0.1);
 				width: 60%;
 			}
 
 			#contact > .inner > :nth-child(2n) {
+				border-right: solid 1px rgba(212, 212, 255, 0.1);
 				padding-left: 3em;
-				width: 40%;
+				width: 60%;
 			}
 
 			#contact > .inner > .split {
