--- a/templates/site/contact.html.twig
+++ b/templates/site/contact.html.twig
@@ -30,7 +30,7 @@
                             {{ form_widget(contactForm.message) }}
                         </p>
                         <p>
-                            <button type="submit">Envoyer</button>
+                            <button id="contactSubmit" type="submit">Envoyer</button>
                         </p>
                     {{ form_end(contactForm) }}
                     <p><a href="{{ path('home') }}">Retour à l'accueil</a></p>
