--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -7,65 +7,100 @@
         <div id="main" class="alt">
             <!-- One -->
             <section id="one">
+                <div class="bannerContainer">
+                    <img src="{{ asset_base }}{{ party ? asset(party.banner) : (weekend ? asset(weekend.banner) : asset(exhibit.banner)) }}" alt="{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}" />
+                </div>
                 <div class="inner">
-                    <header class="major">
-                        <h1>{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}</h1>
-                        <h2>Le {{ party ? party.date|date('d-m-Y - H:m') : (weekend ? weekend.date|date('d-m-Y - H:m') : exhibit.date|date('d-m-Y - H:m')) }}</h2>
-                        {% if weekend %}
-                        <h4>Jusqu'au {{ weekend.endDate|date('d-m-Y') }}</h4>
-                        {% endif %}
-                    </header>
-                    {% if app.user %}
-                        {% if eventType == 'exhibit' %}
-                            {% if exhibit in app.user.exhibits %}
-                                <a class="aButton" href="{{ path('event_unsubscribe', {'eventType': eventType, 'eventId': eventId}) }}">Se désinscrire</a>
-                            {% else %}
-                                <a class="aButton" href="{{ path('event_subscribe', {'eventType': eventType, 'eventId': eventId}) }}">S'inscrire</a>
-                            {% endif  %}
-                        {% endif %}
+                    <h2>{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}</h2>
+                    <p>
+                        {% if app.user %}
+                            {% if eventType == 'exhibit' %}
+                                {% if exhibit in app.user.exhibits %}
+                                    <a class="aButton button special" href="{{ path('event_unsubscribe', {'eventType': eventType, 'eventId': eventId}) }}">Se désinscrire</a>
+                                {% else %}
+                                    <a class="aButton button special" href="{{ path('event_subscribe', {'eventType': eventType, 'eventId': eventId}) }}">S'inscrire</a>
+                                {% endif  %}
+                            {% endif %}
 
-                        {% if eventType == 'weekend' %}
-                            {% if weekend in app.user.weekends %}
-                                <a class="aButton" href="{{ path('event_unsubscribe', {'eventType': eventType, 'eventId': eventId}) }}">Se désinscrire</a>
-                            {% else %}
-                                <a class="aButton" href="{{ path('event_subscribe', {'eventType': eventType, 'eventId': eventId}) }}">S'inscrire</a>
-                            {% endif  %}
-                        {% endif %}
+                            {% if eventType == 'weekend' %}
+                                {% if weekend in app.user.weekends %}
+                                    <a class="aButton button special" href="{{ path('event_unsubscribe', {'eventType': eventType, 'eventId': eventId}) }}">Se désinscrire</a>
+                                {% else %}
+                                    <a class="aButton button special" href="{{ path('event_subscribe', {'eventType': eventType, 'eventId': eventId}) }}">S'inscrire</a>
+                                {% endif  %}
+                            {% endif %}
 
-                        {% if eventType == 'party' %}
-                            {% if party in app.user.parties %}
-                                <a class="aButton" href="{{ path('event_unsubscribe', {'eventType': eventType, 'eventId': eventId}) }}">Se désinscrire</a>
-                            {% else %}
-                                <a class="aButton" href="{{ path('event_subscribe', {'eventType': eventType, 'eventId': eventId}) }}">S'inscrire</a>
-                            {% endif  %}
+                            {% if eventType == 'party' %}
+                                {% if party in app.user.parties %}
+                                    <a class="aButton button special" href="{{ path('event_unsubscribe', {'eventType': eventType, 'eventId': eventId}) }}">Se désinscrire</a>
+                                {% else %}
+                                    <a class="aButton button special" href="{{ path('event_subscribe', {'eventType': eventType, 'eventId': eventId}) }}">S'inscrire</a>
+                                {% endif  %}
 
-                    {% endif %}
-                    <ul>
-                        {% if eventType == 'exhibit' %}
-                            {% for user in exhibit.users %}
-                                <li>
-                                    {{ user.firstName }} {{ user.lastName }}
-                                </li>
-                            {% endfor %}
-                        {% elseif eventType == 'party' %}
-                            {% for user in party.users %}
-                                <li>
-                                    {{ user.firstName }} {{ user.lastName }}
-                                </li>
-                            {% endfor %}
-                        {% elseif eventType == 'weekend' %}
-                            {% for user in weekend.users %}
-                                <li>
-                                    {{ user.firstName }} {{ user.lastName }}
-                                </li>
-                            {% endfor %}
+                            {% endif %}
                         {% endif %}
-                    </ul>
-                {% endif %}
-                    <span class="image main"><img src="{{ asset_base }}{{ party ? asset(party.banner) : (weekend ? asset(weekend.banner) : asset(exhibit.banner)) }}" alt="{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}" /></span>
-                        <h3>Prix : {{ party ? party.price : (weekend ? weekend.price : exhibit.price) }} € - Lieu : {{ party ? party.location : (weekend ? weekend.location : exhibit.location) }}</h3>
-                    <h3>Contenu de l'event</h3>
-                    <div>{{ (party ? party.details : (weekend ? weekend.details : exhibit.details))|raw }}</div>
+                    </p>
+                    <div class="box">
+                        {{ (party ? party.details : (weekend ? weekend.details : exhibit.details))|raw }}
+                    </div>
+                    <div class="row">
+                        <div class="4u 12u$(small)">
+                            <h4>Infos pratiques</h4>
+                            <div class="table-wrapper">
+                                <ul class="alt">
+                                    <li>
+                                        {{ party ? party.date|localizeddate('medium', 'short') : (weekend ? weekend.date|localizeddate('medium', 'short') : exhibit.date|localizeddate('medium', 'short')) }}
+                                        {% if weekend %}
+                                            &mdash; {{ weekend.endDate|localizeddate('medium', 'none') }}
+                                        {% endif %}
+                                    </li>
+                                    <li>
+                                        {{ party ? party.location : (weekend ? weekend.location : exhibit.location) }}
+                                    </li>
+                                    <li>
+                                        Entrée : {{ party ? party.price : (weekend ? weekend.price : exhibit.price) }} euros
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="8u 12u$(small)">
+                            <h4>Participants</h4>
+                            <div class="table-wrapper">
+                                <table class="alt">
+                                    <tbody>
+                                    {% if eventType == 'exhibit' %}
+                                        {% for user in exhibit.users %}
+                                            <tr>
+                                                <td>
+                                                    {{ user.firstName }} {{ user.lastName }}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    {% elseif eventType == 'party' %}
+                                        {% for user in party.users %}
+                                            <tr>
+                                                <td>
+                                                    {{ user.firstName }} {{ user.lastName }}
+                                                </td>
+                                                <td>
+                                                    <img src="{{ asset_base }}{{ asset(user.avatar) }}" alt="{{ user.username }}" class="avatar">
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    {% elseif eventType == 'weekend' %}
+                                        {% for user in weekend.users %}
+                                            <tr>
+                                                <td>
+                                                    {{ user.firstName }} {{ user.lastName }}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    {% endif %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
