--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
                     {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
                         <li><a href="{{ path('profil') }}">Mon profil</a></li>
                     {% else %}
-                        <li><a href="{{ path('forgotpassword') }}">Mot de passe oublié</a></li>
+                        {#<li><a href="{{ path('forgotpassword') }}">Mot de passe oublié</a></li>#}
                     {% endif %}
                 </ul>
 
