--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,8 @@
             <nav id="menu">
                 <ul class="links">
                     <li><a href="{{ path('home') }}">Accueil</a></li>
-                    <li><a href="{{ path('listeEvent') }}">anciens événements</a></li>
+                    <li><a href="{{ path('home') }}#two">Prochains événements</a></li>
+                    <li><a href="{{ path('listeEvent') }}">Anciens événements</a></li>
                     <li><a href="{{ path('team') }}">Présentation du BDE</a></li>
                     <li><a href="{{ path('contact') }}">Nous contacter</a></li>
                     {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
