--- a/templates/site/event.html.twig
+++ b/templates/site/event.html.twig
@@ -14,7 +14,10 @@
                     <h2>{{ party ? party.name : (weekend ? weekend.name : exhibit.name) }}</h2>
                     {#<p>{{ subject }}</p>
                     {{ wikiSubject }}#}
-                    <p><i class="fas fa-sun"></i> La température à Paris sera de {{ weatherTemp }}°C</p>
+
+
+                    <div id="weather"><p>Chargement de la température</p></div>
+
                     <p>
                         {% if app.user %}
                             {% if eventType == 'exhibit' %}
@@ -127,3 +130,18 @@
             </section>
         </div>
     {% endblock %}
+
+{% block javascripts %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var req = new XMLHttpRequest();
+            req.open('GET', '{{ path('weather')}}', false);
+            req.send(null);
+            if (req.status === 200) {
+                document.getElementById('weather').innerHTML = req.responseText;
+            } else {
+                console.log("Status de la réponse: %d (%s)", req.status, req.statusText);
+            }
+        });
+    </script>
+{% endblock %}
